@@ -8,5 +8,5 @@ require 'action_controller'
 require 'action_controller/test_process'
 
 ActionController::Base.logger = nil
-ActionController::Base.ignore_missing_templates = true
+ActionController::Base.ignore_missing_templates = false
 ActionController::Routing::Routes.reload rescue nil
