@@ -19,7 +19,7 @@ class CustomHandlerTest < Test::Unit::TestCase
   end
 
   def test_custom_render
-    result = @view.render_template( "foo", "hello <%= one %>", "one" => "two" )
+    result = @view.render_template( "foo", "hello <%= one %>", nil, "one" => "two" )
     assert_equal(
       [ "hello <%= one %>", { "one" => "two" }, @view ],
       result )
@@ -27,7 +27,7 @@ class CustomHandlerTest < Test::Unit::TestCase
 
   def test_unhandled_extension
     # uses the ERb handler by default if the extension isn't recognized
-    result = @view.render_template( "bar", "hello <%= one %>", "one" => "two" )
+    result = @view.render_template( "bar", "hello <%= one %>", nil, "one" => "two" )
     assert_equal "hello two", result
   end
 end
