@@ -1,0 +1,2 @@
+Second: <%= name %>
+Third: <%= @name %>
